# misis_bot

./: dasd.py
misis-admission-telegram-bot/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
misis-admission-telegram-bot/app/: .env.example  __main__.py  config.py
misis-admission-telegram-bot/app/keyboards/: buttons.py  profile.py  reply_keyboards.py
misis-admission-telegram-bot/app/utils/: bot_buttons.py  db.py  models.py  replies.py  shit.py  states.py  statistics.py  users.py
misis-admission-vk-bot/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
misis-admission-vk-bot/app/: __main__.py  config.py  replies.py
misis-admission-vk-bot/app/keyboards/: buttons.py  reply_keyboards.py
misis-admission-vk-bot/app/utils/: bot_buttons.py  db.py  models.py  replies.py  shit.py  states.py  statistics.py  users.py
tg_bot/: Dockerfile  pyproject.toml  requirements.txt
tg_bot/app/: __main__.py  config.py
tg_bot/app/keyboards/: reply_keyboards.py
tg_bot/app/utils/: shit.py
vk_bot/: pyproject.toml
vk_bot/app/: __main__.py  config.py
vk_bot/app/keyboards/: reply_keyboards.py
